# mols-agent-assets

./: .aiexclude  .gitignore  .gitmessage  .rumdl.toml  .trash  AGENT.md  AGENTS.md  CONTRIBUTING.md  GUIDELINE.md  README-KR.md  README.ko.md  README.md  command_policy.yml  frontmatter.json  lefthook.yml  pyproject.toml  skills-lock.json
.agents/: README.ko.md  README.md
.agents/brain/: README.md  evolution.md  feedback.md  handover.md  kanban.md  overhand.md  session-bridge.md
.agents/rules/: .template.md  AGENTS.md  agent-friendly.md  aiexclude.md  antigravity.md  asset-guardrails.md  constitution.md  convention-discovery.md  evolution.md  example-overfitting.md  human-friendly.md  kanban.md  karpathy-principle.md  ma.md  overhand.md  persona-TAS.md  private.md  rules.md  session-bridge.md  stochastic-parrots.md  test.md  thesis-antithesis-synthesis.md  why-what-how.md
.agents/skills/: README.md
.agents/workflows/: README.md  check-md-absolute-paths.md  (+3 more)
.codex/: hooks.json
.configs/: mols-agent-asset-studio.cfg.json
.frontmatter/: frontmatter.json
.gemini/: GEMINI.md
discussion/: README.ko.md  README.md
docs/: README-KR.md  README.ko.md  README.md  agent-skills.md  agents-conventions.md  create-skill.md  development.ko.md  development.md  lightweight-decision-guide.md  testing.ko.md  testing.md
gem/: README.md
notes/: affirmative-framing.md  stochastic-parrots.md
outputs/: README-KR.md  README.ko.md  README.md
reports/: briefing-KR.md  implementation_plan-KR.md  implementation_plan_workflow_guideline-KR.md  report-KR.md  workflow_review_methodology-KR.md
rules/: iceberg-chat.md  language-ko.md
scripts/: README-KR.md  README.ko.md  README.md  setup_repo.py  setup_repo.sh  setup_session.py  setup_session.sh  src_to_release.py  workbench_to_src.py
src/: README.ko.md  README.md
studio/: README.md
templates/: README-KR.md  README.ko.md  README.md  doc.ko.md  doc.md  rule.ko.md  rule.md  workflow.ko.md  workflow.md
workbench/: README.md
(+802 files in other folders)
