[project]
name = "mols-agent"
version = "0.1.0"
description = "Agent asset management repository for mols"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.15",
  "rumdl>=0.2.6",
  "ty>=0.0.42",
  "lefthook>=2.1.9",
]

[tool.ruff.lint]
select = ["F", "E", "I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 1

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
